# LegoDetector

./: CMakeLists.txt  README.md  main.cpp
src/: PixelPicker.cpp  PixelPicker.hpp  color_cvt.hpp  main.cpp  moments.hpp  segmentation.hpp  utils.hpp
tests/: test_color_cvt.cpp  test_utils.cpp
